# docs

./: .env.example  .gitignore  BROWSER_PLAYGROUND_README.md  CLAUDE.md  FEEDBACK_WIDGET_README.md  README-tests.md  README.md  docs.sln  docusaurus.config.js  docusaurus.dev.config.js  env-vars-list.csv  find-undocumented-env-vars.sh  netlify.toml  package-lock.json  package.json  pyproject.toml  pytest-results.xml  pytest.ini  secondaryNavbar.js  sidebars.js  site.redirects.js  tsconfig.json  versions-config.json
.github/: PULL_REQUEST_TEMPLATE.md
_build_scripts/: browser-playground-smoke.mjs  link-validator.js  publish-draft-to-netlify.sh  publish-prod-to-netlify.sh  slack-find-author.sh  slack-indexability-results.sh  slack-netlify-message.sh  slack-release-message.sh  slack-test-results.sh  update-config-versions.js  validate-links-branch.js  validate-links-pr.js  verify-links-branch.js  verify-links-build-dev.sh  verify-links-pr.js  verify-links.js  verify-links.sh
_includes/: 1-25-replication-factor.mdx  async-replication-per-collection-config.mdx  client-python-v4-batching-api.md  collection-alias-usage.mdx  collection-mutable-parameters.mdx  collections-count-limit.mdx  compression-by-default.mdx  cross-reference-performance-note.mdx  datatypes.mdx  definition-schema.md  docs-config-gen.mdx  docs-feedback.mdx  dynamic-index-async-req.mdx  embedding-model-providers.mdx  environment-variables.mdx  error-note-vectors-autoschema.mdx  how.to.get.object.count.mdx  incremental-backups-status.mdx  javascript-maintenance-warning.mdx  more-resources-contributor-guide.md  (+27 more)
(+2569 files in other folders)
