[project]
name = "weaviate-docs"
version = "0.1.0"
description = "Weaviate documentation test suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ijson>=3.3.0",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "weaviate-agents>=1.1.0",
    "weaviate-client>=4.19.0",
    "weaviate-demo-datasets>=0.7.0",
]
